// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppConfirmInstallContent render correctly 1`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    data-test="confirm-content"
    title="Confirm Peter's Properties installation"
  />
  <Component
    body={
      <React.Fragment>
        <p>
          This action will install the app for ALL platform users.
          <br />
          Peter's Properties
           requires the permissions below. By installing you are granting permission to your data.
        </p>
        <ul>
          <li>
            Read data about developers
          </li>
          <li>
            Write data about developers
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          dataTest="agree-btn"
          loading={false}
          type="button"
          variant="primary"
        >
          Confirm
        </Unknown>
        <Unknown
          dataTest="disagree-btn"
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`AppConfirmInstallContent render correctly 2`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    data-test="confirm-content"
    title="Confirm Peter's Properties installation"
  />
  <Component
    body={
      <React.Fragment>
        <p>
          This action will install the app for ALL platform users.
          <br />
          Peter's Properties
           requires the permissions below. By installing you are granting permission to your data.
        </p>
        <ul>
          <li>
            Read data about developers
          </li>
          <li>
            Write data about developers
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          dataTest="agree-btn"
          loading={false}
          type="button"
          variant="primary"
        >
          Confirm
        </Unknown>
        <Unknown
          dataTest="disagree-btn"
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`AppConfirmInstallContent render correctly 3`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    data-test="confirm-content"
    title="Confirm Peter's Properties installation"
  />
  <Component
    body={
      <React.Fragment>
        <p>
          This action will install the app for ALL platform users.
          <br />
          Peter's Properties
           requires the permissions below. By installing you are granting permission to your data.
        </p>
        <ul>
          <li>
            Read data about developers
          </li>
          <li>
            Write data about developers
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          dataTest="agree-btn"
          loading={true}
          type="button"
          variant="primary"
        >
          Confirm
        </Unknown>
        <Unknown
          dataTest="disagree-btn"
          disabled={true}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`AppConfirmInstallContent render correctly 4`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    data-test="confirm-content"
    title="Confirm Peter's Properties installation"
  />
  <Component
    body={
      <React.Fragment>
        <p>
          This action will install the app for ALL platform users.
          <br />
          Peter's Properties
           requires the permissions below. By installing you are granting permission to your data.
        </p>
        <ul>
          <li>
            Read data about developers
          </li>
          <li>
            Write data about developers
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          dataTest="agree-btn"
          loading={false}
          type="button"
          variant="primary"
        >
          Confirm
        </Unknown>
        <Unknown
          dataTest="disagree-btn"
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`AppConfirmInstallContent render correctly 5`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    data-test="confirm-content"
    title="Confirm Peter's Properties installation"
  />
  <Component
    body={
      <React.Fragment>
        <p>
          This action will install the app for ALL platform users.
          <br />
          Peter's Properties
           requires the permissions below. By installing you are granting permission to your data.
        </p>
        <ul>
          <li>
            Read data about developers
          </li>
          <li>
            Write data about developers
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          dataTest="agree-btn"
          loading={false}
          type="button"
          variant="primary"
        >
          Confirm
        </Unknown>
        <Unknown
          dataTest="disagree-btn"
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;
